[package]
name = "sicl4_db"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.7" }

[dev-dependencies]
rand = "0.8"
rand_xorshift = "0.3"
work-queue = "0.1.4"
memory-stats = "1.1"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }
