[package]
name = "sicl4_db"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1"
tracing = "0.1"
uuid = "1.8"
work-queue = "0.1.4"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }
