[package]
name = "sicl4_repl"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sicl4_db = { path = "../sicl4_db" }
uuid = { version = "1.6" }

[dependencies.pyo3]
version = "0.20.0"
features = ["auto-initialize"]
